# mcp-host-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  PLAYWRIGHT_INTEGRATION.md  README.md  UI-Client-Requirements.md  pyproject.toml  requirements.md  requirements.txt  test_mcp_host.py
MCP_requirements/: Scheduler-host-integration.md
app/: main.py
app/api/: models.py  models_api.py  models_router.py  playwright_router.py  router.py
app/auth/: __init__.py  init.py  models.py  router.py  store.py  utils.py
app/config/: config.py
app/host/: __init__.py  client.py  host.py  mcp_client.py  (+1 more)
config/: config.json  config.template.json  example_configs.json
data/: users.json
docs/: azure_deployment_best_practices.md  azure_devops_pipeline.md  azure_integration_guide.md  azure_openai_integration.md  mcp_sdk_azure_integration.md  mcp_sdk_integration.md  mcp_sdk_integration_summary.md  playwright_mcp.md  scheduler_guide.md
host/: host.py
scripts/: README.md  configure_mcp_servers.py  scheduler_example.py  search_server.py  set_playwright_mode.py  setup_environment.py  show_mcp_tools.py  start_scheduler.py  start_services.py  test_api.py  test_claude_default.py  test_mcp_sdk_integration.py  test_mcp_service.py  test_playwright_integration.py  test_provider_api.py  test_providers.py  test_scheduler_auth.py  test_scheduler_integration.py  test_scheduler_mcp.py  update_playwright_config.py  update_scheduler_config.py  webscraper_server.py
tests/: test_config.py  test_playwright_mcp_server.py
ui_requirements/: ui_changes.md
(+10 files in other folders)
