[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_service"
version = "0.1.0"
description = "MCP Host/Client/Service for Hugging Face models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "transformers>=4.41.0",
    "torch>=2.2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "httpx>=0.26.0",
    "jsonschema>=4.21.0",
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
